# Dropship

./: .gitignore  01f1400d-46f2-4dce-9629-757400382f75.yaml  CLAUDE.md  Cargo.toml  README.md
assets/: gameboard.html  preview.html
crates/dropship-core/: Cargo.toml
crates/dropship-core/src/: lib.rs
crates/dropship-ports/: Cargo.toml
crates/dropship-ports/src/: lib.rs
crates/dropship-wasm/: Cargo.toml
crates/dropship-wasm/src/: lib.rs
obsidian/: Dropship.md  workspace.canvas
